--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   update-readme:
+    environment: EM
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
