--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,21 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_PROJECTS: False
+          SHOW_OS: False
+          SHOW_EDITORS: False
+          SHOW_TIMEZONE: True
+          SHOW_COMMIT: True
+          SHOW_LANGUAGE: True
+          SHOW_LINES_OF_CODE: False
+          SHOW_LANGUAGE_PER_REPO: False
+          SHOW_LOC_CHART: True
+          SHOW_DAYS_OF_WEEK: True
+          SHOW_PROFILE_VIEWS: True
+          SHOW_SHORT_INFO: True
+          SHOW_UPDATED_DATE: True
+          SHOW_TOTAL_CODE_TIME: True
+          COMMIT_BY_ME: False
+          COMMIT_SINGLE: False
+          LOCALE: en
+          SYMBOL_VERSION: 1
