--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,33 @@
 name: Waka Readme
 
 on:
-  schedule:
-    - cron: '30 18 * * *'
+  # for manual workflow trigger
   workflow_dispatch:
+  schedule:
+    # runs at 12 AM UTC (5:30 AM IST)
+    - cron: "0 0 * * *"
+
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+        # this action name
+      - uses: athul/waka-readme@master # do NOT replace with anything else
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: False
-          SHOW_OS: False
-          SHOW_EDITORS: False
-          SHOW_TIMEZONE: True
-          SHOW_COMMIT: True
-          SHOW_LANGUAGE: True
-          SHOW_LINES_OF_CODE: False
-          SHOW_LANGUAGE_PER_REPO: False
-          SHOW_LOC_CHART: True
-          SHOW_DAYS_OF_WEEK: True
-          SHOW_PROFILE_VIEWS: True
-          SHOW_SHORT_INFO: True
-          SHOW_UPDATED_DATE: True
-          SHOW_TOTAL_CODE_TIME: True
-          COMMIT_BY_ME: False
-          COMMIT_SINGLE: False
-          LOCALE: en
-          SYMBOL_VERSION: 1
+          GH_TOKEN: ${{ secrets.GH_TOKEN }} # optional if on profile readme
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # required
+          ### meta
+          API_BASE_URL: https://wakatime.com/api # optional
+          REPOSITORY: YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME # optional
+          ### content
+          SHOW_TITLE: true # optional
+          SECTION_NAME: waka # optional
+          BLOCKS: -> # optional
+          CODE_LANG: rust # optional
+          TIME_RANGE: all_time # optional
+          LANG_COUNT: 10 # optional
+          SHOW_TIME: true # optional
+          SHOW_TOTAL: true # optional
+          SHOW_MASKED_TIME: false # optional
+          STOP_AT_OTHER: true # optional
