--- a/.github/workflows/ori.yml
+++ b/.github/workflows/ori.yml
@@ -12,4 +12,5 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
