--- a/.github/workflows/ori.yml
+++ b/.github/workflows/ori.yml
@@ -14,8 +14,9 @@ jobs:
         with:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_COMMIT: "False"
-          SHOW_OS: "False"
-          SHOW_PROJECTS: "False"
-          COMMIT_BY_ME: "True"
+          SHOW_COMMIT: False
+          SHOW_OS: False
+          SHOW_PROJECTS: False
+          COMMIT_BY_ME: True
+          SHOW_EDITORS: False
           
