--- a/.github/workflows/ori.yml
+++ b/.github/workflows/ori.yml
@@ -19,4 +19,8 @@ jobs:
           SHOW_PROJECTS: False
           COMMIT_BY_ME: True
           SHOW_EDITORS: False
-          
+          SHOW_LINES_OF_CODE: True
+          SHOW_LOC_CHART: False
+          TIMEZONE: America/Toronto
+
+
